# local-drama-studio

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260627_2301_create_projects_table.py  20260628_0100_create_character_assets.py  20260628_0200_create_scene_assets.py  20260628_0300_create_shot_assets.py  20260628_0310_fix_shot_duration_constraint.py  20260629_0100_create_vision_analysis_tasks.py  20260629_0200_create_keyframe_generation_tasks.py  20260629_0300_create_keyframe_generation_runs.py  20260704_0400_create_video_generation_tasks.py  20260704_0500_add_video_generation_task_inputs.py  20260714_0100_add_keyframe_task_purpose.py  20260715_0100_create_project_exports.py  20260715_0200_create_project_canvas.py  20260716_0100_create_quick_generate_requests.py  20260716_0200_add_media_shot_references.py
apps/api/app/: main.py
apps/api/app/api/: asset_picker.py  asset_summaries.py  canvas_bindings.py  (+19 more)
apps/api/tests/: conftest.py  test_asset_picker.py  test_asset_summaries.py  test_canvas_bindings.py  test_characters.py  test_database.py  test_director_engine.py  test_ffmpeg_service.py  test_generation_tasks.py  test_health.py  test_keyframe_generation.py  test_keyframe_tasks.py  test_production_status.py  test_project_canvas.py  test_project_timeline_exports.py  test_projects.py  test_prompt_builder.py  test_quick_generate.py  test_scenes.py  test_shot_recommendations.py  test_shots.py  test_video_generation.py  test_vision_analysis.py
(+316 files in other folders)
